--- a/analisador de numeros/estilo.css
+++ b/analisador de numeros/estilo.css
@@ -1,10 +1,10 @@
 body{
-  background: rgb(32, 75, 131);
+  background: rgb(0, 0, 0);
   font: normal 15pt arial;
 }
 
 header {
-  color: white;
+  color: rgb(255, 255, 255);
   text-align: center;
 }
 
